--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dicebear/collection": "^9.3.1",
+    "@dicebear/core": "^9.3.1",
     "@supabase/supabase-js": "^2.95.3",
     "framer-motion": "^12.33.0",
     "react": "^19.2.0",
